Adding get task details and update task route
